src/test/ui/borrowck/issue-64453.stderr
error: `Arguments::<'a>::new_v1` is not yet stable as a const fn
  --> $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = help: add `#![feature(const_fmt_arguments_new)]` to the crate attributes to enable
   = note: this error originates in the macro `$crate::__export::format_args` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: calls in statics are limited to constant functions, tuple structs and tuple variants
  --> $DIR/issue-64453.rs:4:31
   |
LL | static settings_dir: String = format!("");
   |                               ^^^^^^^^^^^
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0507]: cannot move out of static item `settings_dir`
  --> $DIR/issue-64453.rs:14:37
   |
LL |     let settings_data = from_string(settings_dir);
   |                                     ^^^^^^^^^^^^ move occurs because `settings_dir` has type `String`, which does not implement the `Copy` trait

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0015, E0507.
For more information about an error, try `rustc --explain E0015`.
